--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+    id 'kotlinx-serialization'
 }
 
 android {
@@ -69,6 +72,21 @@ dependencies {
     implementation "androidx.compose.runtime:runtime-saveable:1.1.1"
 
 
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 
+    implementation "com.google.dagger:hilt-android:2.41"
+    kapt "com.google.dagger:hilt-android-compiler:2.41"
+
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
+
+    implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
+
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-alpha06"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
+
+    implementation "androidx.navigation:navigation-compose:2.4.2"
 
 }
