--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,11 @@ buildscript {
     ext {
         compose_version = '1.1.1'
     }
+
+    dependencies {
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.41'
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.6.10" //kotlinversion
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 
@@ -14,7 +19,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false  //kotlinversion
 }
 
 task clean(type: Delete) {
